--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^3.1.0",
     "d3": "^5.14.2",
     "deck.gl": "^7.3.8",
+    "lodash.throttle": "^4.1.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
