--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "d3": "^5.14.2",
-    "deck.gl": "^7.3.8",
+    "deck.gl": "^8.0.6",
     "lodash.throttle": "^4.1.1",
+    "nebula.gl": "^0.17.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
