--- a/web-app/package.json
+++ b/web-app/package.json
@@ -14,11 +14,27 @@
     "react-map-gl": "^5.1.3",
     "react-scripts": "^3.3.0"
   },
+  "resolutions": {
+    "@turf/difference": "6.0.1"
+  },
   "devDependencies": {},
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
