--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,7 @@
     "nebula.gl": "^0.17.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-collapse": "^5.0.1",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-map-gl": "^5.1.3",
