--- a/web-app/package.json
+++ b/web-app/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-collapse": "^5.0.1",
+    "react-collapsible": "^2.6.2",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-map-gl": "^5.1.3",
