--- a/web-app/package.json
+++ b/web-app/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-map-gl": "^5.1.3",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "supercluster": "^6.0.1"
   },
   "resolutions": {
     "@turf/difference": "6.0.1"
